tests/baselines/reference/unusedVariablesinBlocks2.errors.txt
tests/cases/compiler/unusedVariablesinBlocks2.ts(4,13): error TS6133: 'x' is declared but never used.


==== tests/cases/compiler/unusedVariablesinBlocks2.ts (1 errors) ====
    function f1 () {
        let x = 10;
        {
            let x = 11;
                ~
!!! error TS6133: 'x' is declared but never used.
        }
        x++;
    }